implemented Eran suggested changes

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<hr>
 					<p class="summary" style="font-family:inherit;">
 						<sup class="fa fa-quote-left"></sup>
-						Originally from Israel. I joined the Hebrew university of Jerusalem in 2009, after serving 3 years in the Israeli navy commando. Finished my B.Sc in 2014 and by then developed an appetite for a wide range of technological subjects. Discovered early on, how much there is to learn and working on it on a daily basis.
+						Originally from Israel. I joined the Hebrew University of Jerusalem in 2009, after serving for 3 years in the Israeli naval commando. I Finished my B.Sc in 2014 and by then have developed an appetite for a wide range of technological subjects. I Discovered early on how much there is to learn, and am working on it on a daily basis.
 						<sup class="fa fa-quote-right"></sup>
 					</p>
 				</div>
@@ -126,15 +126,15 @@
 					<div class="col-md-10">
 							<div class="item-detail">
 								<h3>
-									<span>Stealth fintech app - Lead developer</span>
+									<span>Stealth Fintech App - Lead Developer</span>
 									<span class="pull-right">( 2016 - 2017 )</span>
 								</h3>
 								<h4>
 									<a target="#">
-										@Germny / Israel
+										@Germany / Israel
 									</a>
 								</h4>
-								<p class="text-muted">Leading the development of fintech application in the algotrading domain</p>
+								<p class="text-muted">Leading the development of a fintech application in the Algo-trading domain</p>
 							</div>
 							<ul>
 								<li>Designed the architecture of the project</li>
@@ -143,37 +143,37 @@
 							<hr>
 							<div class="item-detail">
 								<h3>
-									<span>Senior software engineer</span>
+									<span>Senior software Engineer</span>
 									<span class="pull-right">( 2017 )</span>
 								</h3>
 								<h4>
 									<a target="_blank", href="https://cliqz.com/en/">
-										@Cliqz GmbH, Munich, Germny
+										@Cliqz GmbH, Munich, Germany
 									</a>
 								</h4>
-								<p class="text-muted">Cliqz is developing a multi platform web browser that emphasizes the privacy and protection of the user while maintaining standards and pushing edges of technology when it comes to browsing speed and latency</p>
+								<p class="text-muted">Cliqz is developing a multi-platform web browser that emphasizes the privacy and protection of the user while maintaining standards and pushing the edges of technology regarding browsing speed and latency</p>
 							</div>
 							<ul>
-								<li>Member of the core browser team. Worked on the company proprietary Firefox based browser and extension</li>
+								<li>Member of the core browser team. Worked on the company's proprietary Firefox based browser and extension</li>
 								<li>Focused mainly on low level client-side developments (low-level front end - C++ & vanilla JS)</li>
-								<li>Implemented solutions to various problems from wide range of domains (graphics rendering, communication protocols utilization optimization, security related concerns) using advanced modern standards</li>
+								<li>Implemented solutions to various problems from a wide range of domains (graphics rendering, communication protocols utilization optimization, security related concerns) using advanced modern standards</li>
 							</ul>
 							<hr>
 							<div class="item-detail">
 								<h3>
-									<span>Senior software engineer</span>
+									<span>Senior software Engineer</span>
 									<span class="pull-right">( 2016 )</span>
 								</h3>
 								<h4>
 									<a target="_blank" href="www.mapegy.com">
-										@Mapegy GmbH, Berlin, Germny
+										@Mapegy GmbH, Berlin, Germany
 									</a>
 								</h4>
-								<p class="text-muted">Mapegy GmbH is a business consulting agency that provides high tech and innovation consulting, derived from collection massive data sources.</p>
+								<p class="text-muted">Mapegy GmbH is a business consulting agency that provides high tech and innovation consulting, derived from collecting massive data sources.</p>
 							</div>
 							<ul>
 								<li>The role was divided equally between full stack front end development and hardcore data engineering</li>
-								<li>Working closely with the PM&#x2F;sales&#x2F;colleagues in fast pace release oriented development cycles</li>
+								<li>Working closely with the PM&#x2F;sales&#x2F;colleagues in fast pace, release oriented development cycles</li>
 								<li>Integrating data sources and enriching&#x2F;improving quality of data and data analysis techniques</li>
 								<li>Supporting and mentoring junior developers</li>
 							</ul>
@@ -194,7 +194,7 @@
 								<li>Defined the product and executed its implementation from pre-planning to the POC and beta</li>
 								<li>Planned and defined proccesses for the product wide scale phase</li>
 								<li>Consulting and directing the company&#39;s technological aspects</li>
-								<li>Successfully delivered product&#39;s iterations in pressing time tables and demanding environments</li>
+								<li>Successfully delivered multiple product&#39;s iterations in pressing time tables and demanding environments</li>
 							</ul>
 							<hr>
 							<div class="item-detail">
@@ -210,9 +210,9 @@
 								<p class="text-muted">Ayyeka develops low  energy remote monitoring solutions for various industries. Ayyeka provides holistic autonomous data collection system that integrates with cloud services and enables comprehensive insights on the collected data</p>
 							</div>
 							<ul>
-								<li>Managed the company devops section. Was the mediator between the customers and the engineers. Facilitated enhancements and resolutions for various subjects</li>
+								<li>Managed the company DevOps section. Acted as the mediator between the customers and the engineers. Facilitated enhancements and resolutions for various subjects</li>
 								<li>Developed essential monitoring systems for the company products</li>
-								<li>The &quot;quick &amp; dirty guy&quot; for high demand quick solutions for any technological development problem</li>
+								<li>Served as the &quot;quick &amp; dirty development guy&quot; for high demand quick solutions for any technological development problem</li>
 							</ul>
 							<hr>
 							<div class="item-detail">
@@ -238,7 +238,7 @@
 								</h3>
 								<h4>
 									<a target="_blank" href="www.mapegy.com">
-										@Mapegy GmbH, Berlin, Germny
+										@Mapegy GmbH, Berlin, Germany
 									</a>
 								</h4>
 								<p class="text-muted">Mapegy GmbH is a business consulting agency that provides high tech and innovation consulting, derived from collection massive data sources</p>
@@ -257,7 +257,7 @@
 					<div class="col-md-10">
 							<div class="item-detail">
 								<h3>Hebrew University of Jerusalem</h3>
-								<h4>Electric Engineering, Major in Computer Engineering, Bachelor</h4>
+								<h4>Electric Engineering, Major in Computer Engineering, Bachelors</h4>
 
 								<h5>2009 - 2014</h5>
 							</div>
@@ -322,14 +322,14 @@
 										@V15
 									</a>
 								</h3>
-								<p class="text-muted">Took part in the biggest (to date) non party related political campaign.</p>
+								<p class="text-muted">Took part in the biggest (to date) non partisan related political campaign.</p>
 								<h5>2015</h5>
 								<h4>
 									<span>Digital campaign team member</span>
 								</h4>
 							</div>
 							<ul>
-								<li>Co-created and maintained front app that served millions of users and more then 100K unique per day</li>
+								<li>Co-created and maintained front app that served millions of users and more then 100K unique users per day</li>
 								<li>Co-created and maintained advanced internal CRM that supported the whole organization</li>
 								<li>Assisted the research team by creating advanced analytical tools</li>
 							</ul>
@@ -371,19 +371,19 @@
 					<div class="col-md-10">
 						<div class="item-detail">
 							<h4>
-								<span>"Mr. Katznelson  proved to be a valuable team member, handling numerous tasks that require both high level of creativity and ‘getting things done’ attitude."</span>
+								<span>"Mr. Katznelson  proved to be a valuable team member, handling numerous tasks that require both a high level of creativity and a ‘getting things done’ attitude."</span>
 							</h4>
 							<h5 style="margin-top: -0.4rem;">Ariel Stern, CEO, Ayyeka Technologies Ltd.</h5>
 						</div>
 						<div class="item-detail" style="margin-top: 2rem;">
 							<h4>
-								<span>"Yotam Katznelson showed an excellent experience and knowledge in many fields, both technical and intellectual. He skillfully connected various areas of research and articulated them in accessible and creative ways. He has brought his own approach and gumption into the projects and worked dedicatedly and independently with high degree of self-motivation."</span>
+								<span>"Yotam Katznelson showed an excellent experience and knowledge in many fields, both technical and intellectual. He skillfully connected various areas of research and articulated them in accessible and creative ways. He has brought his own approach and gumption into the projects and worked dedicatedly and independently with a high degree of self-motivation."</span>
 							</h4>
 							<h5 style="margin-top: -0.4rem;">Dr. Peter Walde, CEO, Mapegy GmbH</h5>
 						</div>
 						<div class="item-detail" style="margin-top: 2rem;">
 							<h4>
-								<span>In his work, Yotam Katznelson presented outstanding capabilities. He presented outstanding degree of commitement for the project, foresaw problems long before they presented themselves and brought to the table a fresh mind and keen desire for elegant and simple problem solving."</span>
+								<span>"In his work, Yotam Katznelson presented outstanding capabilities. He presented outstanding degree of commitment for the project, foresaw problems long before they presented themselves and brought a fresh mind to the table, and keen desire for elegant and simple problem solving."</span>
 							</h4>
 							<h5 style="margin-top: -0.4rem;">Amnon Demri, CEO, Quickest Owl Ltd.</h5>
 						</div>
