--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 									<span class="pull-right">( 2016 )</span>
 								</h3>
 								<h4>
-									<a target="_blank" href="www.mapegy.com">
+									<a target="_blank" href="http://www.mapegy.com">
 										@Mapegy GmbH, Berlin, Germany
 									</a>
 								</h4>
@@ -184,7 +184,7 @@
 									<span class="pull-right">( 2015 - 2016 )</span>
 								</h3>
 								<h4>
-									<a target="_blank" href="">
+									<a target="_blank" href="https://www.halo-analytics.com/">
 										@HALO Analytics, Israel
 									</a>
 								</h4>
@@ -203,7 +203,7 @@
 									<span class="pull-right">( 2013 - 2015 )</span>
 								</h3>
 								<h4>
-									<a target="_blank" href="www.ayyeka.com">
+									<a target="_blank" href="https://www.ayyeka.com">
 										@Ayyeka Technologies Ltd., Jerusalem, Israel
 									</a>
 								</h4>
@@ -221,7 +221,7 @@
 									<span class="pull-right">( 2013 - 2015 )</span>
 								</h3>
 								<h4>
-									<a target="_blank" href="www.quickest-owl.com">
+									<a target="_blank" href="http://www.quickest-owl.com">
 										@Quickest Owl Ltd., Israel
 									</a>
 								</h4>
@@ -237,7 +237,7 @@
 									<span class="pull-right">( 2012 )</span>
 								</h3>
 								<h4>
-									<a target="_blank" href="www.mapegy.com">
+									<a target="_blank" href="http://www.mapegy.com">
 										@Mapegy GmbH, Berlin, Germany
 									</a>
 								</h4>
@@ -318,7 +318,7 @@
 					<div class="col-md-10">
 							<div class="item-detail">
 								<h3>
-									<a target="_blank" href="www.v15.org.il">
+									<a target="_blank" href="http://www.v15.org.il">
 										@V15
 									</a>
 								</h3>
@@ -336,7 +336,7 @@
 							<hr>
 							<div class="item-detail">
 								<h3>
-									<a target="_blank" href="http:&#x2F;&#x2F;www.media-noche.org&#x2F;">
+									<a target="_blank" href="http://www.media-noche.org">
 										@Media Noche Salsa
 									</a>
 								</h3>
