added linkedin icon image

--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
 						Esplanade 5, Berlin, DE 13187
 						<br>
 						<span class="social-links-wrapper">
-							<a href="https://www.linkedin.com/in/yotam-katznelson/" target="_blank">Linkedin</a>&nbsp;&nbsp;
+							<a href="https://www.linkedin.com/in/yotam-katznelson/" target="_blank">
+								<img src="linkedin-img.png" alt='linkedin_img' style="width: 5%;"></img>
+							</a>
 						</span>
 					</p>
 					<p class="location text-right col-md-6">
