--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			<br>
 				<div class="col-md-2">
         				<img class="media-object img-circle pull-right"
-							data-src="holder.js/64x64" alt="64x64" src="https:&#x2F;&#x2F;media.licdn.com&#x2F;mpr&#x2F;mpr&#x2F;shrinknp_400_400&#x2F;p&#x2F;8&#x2F;005&#x2F;04f&#x2F;134&#x2F;103adbe.jpg"
+							data-src="holder.js/64x64" alt="64x64" src="self.jpeg"
 							style="width: 150px; height: 150px;">
 				</div>
 				<div class="col-md-10">
@@ -118,7 +118,7 @@
 					<hr>
 					<p class="summary" style="font-family:inherit;">
 						<sup class="fa fa-quote-left"></sup>
-						Originally from Israel. I joined the Hebrew University of Jerusalem in 2009, after serving for 3 years in the Israeli naval commando. I Finished my B.Sc in 2014 and by then have developed an appetite for a wide range of technological subjects. I Discovered early on how much there is to learn, and am working on it on a daily basis.
+						Professional IT engineer. Electric Engineer by eductaion. Software Engineer by profession. Successfully leading development teams in various projects, not so successfully leading my kids (but working on it... &#x1F605;). Always happy to hear about interesting projects.
 						<sup class="fa fa-quote-right"></sup>
 					</p>
 				</div>
@@ -128,19 +128,55 @@
 					<div class="col-md-10">
 							<div class="item-detail">
 								<h3>
-									<span>Stealth Fintech App - Lead Developer</span>
-									<span class="pull-right">( 2016 - 2017 )</span>
+									<span>VP R&D</span>
+									<span class="pull-right">( 2018 )</span>
+								</h3>
+								<h4>
+									<a target="_blank", href="https://securitize.io/">
+										@Securitize, Remote team - Germany / Ukraine / Israel / USA
+									</a>
+								</h4>
+								<p class="text-muted">In charge of building white label platform for ICO of Security tokens on the Ethereum blockchain</p>
+							</div>
+							<ul>
+								<li>System architecture</li>
+								<li>Acting as the intersection point between the technical, the product and the design</li>
+								<li>Coordination and orchestration of the product development. From the most distant model to the most critical transaction executioner</li>
+							</ul>
+							<hr>
+							<div class="item-detail">
+								<h3>
+									<span>Principal Engineer</span>
+									<span class="pull-right">( 2017 - 2018 )</span>
 								</h3>
 								<h4>
 									<a target="#">
-										@Germany / Israel
+										@Stealth Fintech, Germany
 									</a>
 								</h4>
-								<p class="text-muted">Leading the development of a fintech application in the Algo-trading domain</p>
+								<p class="text-muted">Leading the development of a fintech application in the brokerage domain</p>
 							</div>
 							<ul>
-								<li>Designed the architecture of the project</li>
-								<li>Implemented the vast majority of functionality</li>
+								<li>Design, architecture, and implementation of main backend systems</li>
+								<li>Oversaw the development of critical internal systems, front and back</li>
+							</ul>
+							<hr>
+							<div class="item-detail">
+								<h3>
+									<span>Founder / Lead Developer</span>
+									<span class="pull-right">( 2012 - 2018 )</span>
+								</h3>
+								<h4>
+									<a target="#">
+										@Stealth algortrading platfrom, Germany / Israel / Earth
+									</a>
+								</h4>
+								<p class="text-muted">Developing Algotrading engines for multiple markets</p>
+							</div>
+							<ul>
+								<li>Concept defintion</li>
+								<li>Techniques and methods assessment and implementation</li>
+								<li>Prodcut Owner of the trading engine, and several of the backend & frontend systems</li>
 							</ul>
 							<hr>
 							<div class="item-detail">
@@ -296,13 +332,15 @@
 							<!-- <h4> Software Engineer </h4> -->
 							<h5><b></b></h5>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Python</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">JavaScript</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Java</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">C++</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Frontend</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Backend</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Full stack</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Security</span>
-								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Databases</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Relatonal Databases</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">In-Memory (noSQL) Databases</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Big Data</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Machine Learning</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Cloud Infrastructure</span>
@@ -311,6 +349,7 @@
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Development Boards</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Git</span>
 								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Data visualization</span>
+								<span class="badge" style="background-color : #67809F;padding: 0.5em 0.5em 5px 0.5em;margin: 0 0 5px 0;">Agile</span>
 							<hr>
 					</div>
 				</div>
