--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
 				margin-top: 0;
 			}
 
+			@media screen and (max-width: 440px) {
+				.position-location	{
+							margin-top: 40px;
+					}
+				.position-time	{
+							margin-top: 5px;
+					}
+			}
 			@media screen and (min-width: 381px) and (max-width: 440px) {
 				.self-img	{
 							width: 120px !important;
@@ -149,9 +157,9 @@
 							<div class="item-detail">
 								<h3>
 									<span>VP R&D</span>
-									<span class="pull-right">( 2018 )</span>
+									<span class="pull-right position-time">( 2018 )</span>
 								</h3>
-								<h4>
+								<h4 class="position-location">
 									<a target="_blank", href="https://securitize.io/">
 										@Securitize, Remote team - Germany / Ukraine / Israel / USA
 									</a>
@@ -167,9 +175,9 @@
 							<div class="item-detail">
 								<h3>
 									<span>Principal Engineer</span>
-									<span class="pull-right">( 2017 - 2018 )</span>
+									<span class="pull-right position-time">( 2017 - 2018 )</span>
 								</h3>
-								<h4>
+								<h4 class="position-location">
 									<a target="#">
 										@Stealth Fintech, Germany
 									</a>
@@ -184,9 +192,9 @@
 							<div class="item-detail">
 								<h3>
 									<span>Founder / Lead Developer</span>
-									<span class="pull-right">( 2012 - 2018 )</span>
+									<span class="pull-right position-time">( 2012 - 2018 )</span>
 								</h3>
-								<h4>
+								<h4 class="position-location">
 									<a target="#">
 										@Stealth algortrading platfrom, Germany / Israel / Earth
 									</a>
@@ -202,9 +210,9 @@
 							<div class="item-detail">
 								<h3>
 									<span>Senior software Engineer</span>
-									<span class="pull-right">( 2017 )</span>
+									<span class="pull-right position-time">( 2017 )</span>
 								</h3>
-								<h4>
+								<h4 class="position-location">
 									<a target="_blank", href="https://cliqz.com/en/">
 										@Cliqz GmbH, Munich, Germany
 									</a>
@@ -220,9 +228,9 @@
 							<div class="item-detail">
 								<h3>
 									<span>Senior software Engineer</span>
-									<span class="pull-right">( 2016 )</span>
+									<span class="pull-right position-time">( 2016 )</span>
 								</h3>
-								<h4>
+								<h4 class="position-location">
 									<a target="_blank" href="http://www.mapegy.com">
 										@Mapegy GmbH, Berlin, Germany
 									</a>
@@ -239,9 +247,9 @@
 							<div class="item-detail">
 								<h3>
 									<span>VP Engineering</span>
-									<span class="pull-right">( 2015 - 2016 )</span>
+									<span class="pull-right position-time">( 2015 - 2016 )</span>
 								</h3>
-								<h4>
+								<h4 class="position-location">
 									<a target="_blank" href="https://www.halo-analytics.com/">
 										@HALO Analytics, Israel
 									</a>
@@ -258,9 +266,9 @@
 							<div class="item-detail">
 								<h3>
 									<span>Application Engineer</span>
-									<span class="pull-right">( 2013 - 2015 )</span>
+									<span class="pull-right position-time">( 2013 - 2015 )</span>
 								</h3>
-								<h4>
+								<h4 class="position-location">
 									<a target="_blank" href="https://www.ayyeka.com">
 										@Ayyeka Technologies Ltd., Jerusalem, Israel
 									</a>
@@ -276,9 +284,9 @@
 							<div class="item-detail">
 								<h3>
 									<span>Freelancer Software Engineer</span>
-									<span class="pull-right">( 2013 - 2015 )</span>
+									<span class="pull-right position-time">( 2013 - 2015 )</span>
 								</h3>
-								<h4>
+								<h4 class="position-location">
 									<a target="_blank" href="http://www.quickest-owl.com">
 										@Quickest Owl Ltd., Israel
 									</a>
@@ -292,9 +300,9 @@
 							<div class="item-detail">
 								<h3>
 									<span>Web developer</span>
-									<span class="pull-right">( 2012 )</span>
+									<span class="pull-right position-time">( 2012 )</span>
 								</h3>
-								<h4>
+								<h4 class="position-location">
 									<a target="_blank" href="http://www.mapegy.com">
 										@Mapegy GmbH, Berlin, Germany
 									</a>
