--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 								</h3>
 								<h4 class="position-location">
 									<a target="#">
-										@Stealth algortrading platfrom, Germany / Israel / Earth
+										@Stealth algotrading platfrom, Germany / Israel / Earth
 									</a>
 								</h4>
 								<p class="text-muted">Developing Algotrading engines for multiple markets</p>
