--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 							<ul>
 								<li>Concept defintion</li>
 								<li>Techniques and methods assessment and implementation</li>
-								<li>Prodcut Owner of the trading engine, and several of the backend & frontend systems</li>
+								<li>Prodcut Owner of the trading engine and several of the backend & frontend systems</li>
 							</ul>
 							<hr>
 							<div class="item-detail">
