--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 							<hr>
 							<div class="item-detail">
 								<h3>
-									<span>Senior software Engineer</span>
+									<span>Freelance Senior software Engineer</span>
 									<span class="pull-right position-time">( 2017 )</span>
 								</h3>
 								<h4 class="position-location">
@@ -227,7 +227,7 @@
 							<hr>
 							<div class="item-detail">
 								<h3>
-									<span>Senior software Engineer</span>
+									<span>Freelance Senior software Engineer</span>
 									<span class="pull-right position-time">( 2016 )</span>
 								</h3>
 								<h4 class="position-location">
