--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
 				margin-top: 0;
 			}
 
+			pre.quote {
+				white-space: pre-wrap;
+				font-style: italic;
+				word-break: break-word;
+				font-size: 14px;
+				line-height: 20px;
+			}
+
 			@media screen and (max-width: 440px) {
 				.position-location	{
 							margin-top: 40px;
@@ -440,19 +448,19 @@
 					<div class="col-md-10">
 						<div class="item-detail">
 							<h4>
-								<span>"Mr. Katznelson  proved to be a valuable team member, handling numerous tasks that require both a high level of creativity and a ‘getting things done’ attitude."</span>
+								<pre class="quote">"Mr. Katznelson  proved to be a valuable team member, handling numerous tasks that require both a high level of creativity and a ‘getting things done’ attitude."</pre>
 							</h4>
 							<h5 style="margin-top: -0.4rem;">Ariel Stern, CEO, Ayyeka Technologies Ltd.</h5>
 						</div>
 						<div class="item-detail" style="margin-top: 2rem;">
 							<h4>
-								<span>"Yotam Katznelson showed an excellent experience and knowledge in many fields, both technical and intellectual. He skillfully connected various areas of research and articulated them in accessible and creative ways. He has brought his own approach and gumption into the projects and worked dedicatedly and independently with a high degree of self-motivation."</span>
+								<pre class="quote">"Yotam Katznelson showed an excellent experience and knowledge in many fields, both technical and intellectual. He skillfully connected various areas of research and articulated them in accessible and creative ways. He has brought his own approach and gumption into the projects and worked dedicatedly and independently with a high degree of self-motivation."</pre>
 							</h4>
 							<h5 style="margin-top: -0.4rem;">Dr. Peter Walde, CEO, Mapegy GmbH</h5>
 						</div>
 						<div class="item-detail" style="margin-top: 2rem;">
 							<h4>
-								<span>"In his work, Yotam Katznelson presented outstanding capabilities. He presented outstanding degree of commitment for the project, foresaw problems long before they presented themselves and brought a fresh mind to the table, and keen desire for elegant and simple problem solving."</span>
+								<pre class="quote">"In his work, Yotam Katznelson presented outstanding capabilities. He presented outstanding degree of commitment for the project, foresaw problems long before they presented themselves, brought a fresh mind to the table, and keen desire for elegant and simple problem solving."</pre>
 							</h4>
 							<h5 style="margin-top: -0.4rem;">Amnon Demri, CEO, Quickest Owl Ltd.</h5>
 						</div>
