added beluga, removed pythia/minerva hint

--- a/index.html
+++ b/index.html
@@ -164,6 +164,24 @@
 					<div class="col-md-10">
 							<div class="item-detail">
 								<h3>
+									<span>Founder</span>
+									<span class="pull-right position-time">( 2018 )</span>
+								</h3>
+								<h4 class="position-location">
+									<a target="", href="/">
+										@Beluga R&D Ltd., Germany / Israel / Earth
+									</a>
+								</h4>
+								<p class="text-muted">Founder of technology development and consultancy agency</p>
+							</div>
+							<ul>
+								<li>Group of domain agnostic IT professionals providing state of the art services to customers from a wide range of industries</li>
+								<li>Multi-stage consulting, from idea shaping through POC to MVP all the way to full scale deployment</li>
+								<!-- <li>Coordination and orchestration of the product development. From the most distant model to the most critical transaction executioner</li> -->
+							</ul>
+							<hr>
+							<div class="item-detail">
+								<h3>
 									<span>VP R&D</span>
 									<span class="pull-right position-time">( 2018 )</span>
 								</h3>
@@ -197,7 +215,7 @@
 								<li>Oversaw the development of critical internal systems, front and back</li>
 							</ul>
 							<hr>
-							<div class="item-detail">
+							<!-- <div class="item-detail">
 								<h3>
 									<span>Founder / Lead Developer</span>
 									<span class="pull-right position-time">( 2012 - 2018 )</span>
@@ -214,7 +232,7 @@
 								<li>Techniques and methods assessment and implementation</li>
 								<li>Prodcut Owner of the trading engine and several of the backend & frontend systems</li>
 							</ul>
-							<hr>
+							<hr> -->
 							<div class="item-detail">
 								<h3>
 									<span>Freelance Senior software Engineer</span>
