--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 										@Beluga R&D Ltd., Germany / Israel / Earth
 									</a>
 								</h4>
-								<p class="text-muted">Founder of technology development and consultancy agency</p>
+								<p class="text-muted">Leading technology development and consultancy agency</p>
 							</div>
 							<ul>
 								<li>Group of domain agnostic IT professionals providing state of the art services to customers from a wide range of industries</li>
