fixed href to self ob beluga item

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 									<span class="pull-right position-time">( 2018 )</span>
 								</h3>
 								<h4 class="position-location">
-									<a target="", href="/">
+									<a target="", href="#">
 										@Beluga R&D Ltd., Germany / Israel / Earth
 									</a>
 								</h4>
