added minerva to resume

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			.summary {
 				font-family: "Pt mono";
 				/*font-size: 1.2em;*/
-				font-size: 14px;
+				font-size: 18px;
 			}
 
 			.wip {
@@ -165,7 +165,7 @@
 							<div class="item-detail">
 								<h3>
 									<span>Founder</span>
-									<span class="pull-right position-time">( 2018 )</span>
+									<span class="pull-right position-time">( 2018 - Present )</span>
 								</h3>
 								<h4 class="position-location">
 									<a target="", href="#">
@@ -196,6 +196,24 @@
 								<li>System architecture</li>
 								<li>Acting as the intersection point between the technical, the product and the design</li>
 								<li>Coordination and orchestration of the product development. From the most distant model to the most critical transaction executioner</li>
+							</ul>
+							<hr>
+							<div class="item-detail">
+								<h3>
+									<span>CO-Founder & CTO</span>
+									<span class="pull-right position-time">( 2017 - Present )</span>
+								</h3>
+								<h4 class="position-location">
+									<a target="_blank", href="https://minervatradeapp.com">
+										@Minerva, Earth
+									</a>
+								</h4>
+								<p class="text-muted">Founder and technical lead of autonomous cryptocurrencies trading platform</p>
+							</div>
+							<ul>
+								<li>Fullstack development of the entire platform (Core, Backend, Frontend)</li>
+								<li>Data engineering of the core metrics data points</li>
+								<li>Business development and investors community management</li>
 							</ul>
 							<hr>
 							<div class="item-detail">
