--- a/index.html
+++ b/index.html
@@ -182,6 +182,32 @@
 							<hr>
 							<div class="item-detail">
 								<h3>
+									<span>VP Engineering</span>
+									<span class="pull-right position-time">( 2020 - Present )</span>
+								</h3>
+								<h4 class="position-location">
+									<a target="_blank", href="https://amun.com/">
+										@Amun AG, Remote team - Switzerland / Germany / USA
+									</a>
+								</h4>
+								<p class="text-muted">Member of highly skilled team of professionals automating fund management proccesses and bridging the gap between the fiat and the crypto worlds</p>
+							</div>
+							<hr>
+							<div class="item-detail">
+								<h3>
+									<span>Senior software engineer</span>
+									<span class="pull-right position-time">( 2019-2020 )</span>
+								</h3>
+								<h4 class="position-location">
+									<a target="_blank", href="https://amun.com/">
+										@Amun AG, Remote team - Switzerland / Germany / USA
+									</a>
+								</h4>
+								<p class="text-muted">Member of highly skilled team of professionals automating fund management proccesses and bridging the gap between the fiat and the crypto worlds</p>
+							</div>
+							<hr>
+							<div class="item-detail">
+								<h3>
 									<span>VP R&D</span>
 									<span class="pull-right position-time">( 2018 )</span>
 								</h3>
