modified Beluge description

--- a/index.html
+++ b/index.html
@@ -172,13 +172,8 @@
 										@Beluga R&D Ltd., Germany / Israel / Earth
 									</a>
 								</h4>
-								<p class="text-muted">Leading technology development and consultancy agency</p>
+								<p class="text-muted">My personal (occasionally professional) playground</p>
 							</div>
-							<ul>
-								<li>Group of domain agnostic IT professionals providing state of the art services to customers from a wide range of industries</li>
-								<li>Multi-stage consulting, from idea shaping through POC to MVP all the way to full scale deployment</li>
-								<!-- <li>Coordination and orchestration of the product development. From the most distant model to the most critical transaction executioner</li> -->
-							</ul>
 							<hr>
 							<div class="item-detail">
 								<h3>
