changed location to PT

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				<hr>
 				<p class="location text col-md-6">
 					<span class="fa fa-location-arrow"></span>
-					Berlin, DE 13187
+					Lisbon, PT
 					<br>
 					<span class="social-links-wrapper">
 						<a href="https://www.linkedin.com/in/yotam-katznelson/" target="_blank">
